--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 python:
+- '2.7'
 - '3.4'
 - '3.5'
 install:
@@ -8,4 +9,4 @@ install:
 - pip install ./
 
 script:
-- python3 tests.py
+- python tests.py
